Adjust line-spacing and fix halo effect on hero

--- a/assets/styles/_static-elements.scss
+++ b/assets/styles/_static-elements.scss
@@ -2,7 +2,7 @@
         DEFAULTS
 ************************/
 body {
-    font: 400 18px/1.75 'Lato', 'Helvetica Neue', Helvetica, Arial, Verdana, sans-serif;
+    font: 400 18px/1.6 'Lato', 'Helvetica Neue', Helvetica, Arial, Verdana, sans-serif;
     color: $txt;
 }
 
